codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__app_server_collab_wait_items_render_history.snap
---
source: tui/src/chatwidget/tests/app_server.rs
expression: combined
---

CODEX · Tool Calls
┊ • Waiting for 2 agents
┊   └ Robie [explorer]
┊     Ada [reviewer]



CODEX · Tool Calls
┊ • Finished waiting
┊   └ Robie [explorer]: Completed - Done
┊     Ada [reviewer]: Running
