codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__bold_status_line_icons.snap
---
source: tui/src/chatwidget/tests/status_and_layout.rs
expression: normalized_backend_snapshot(terminal.backend())
---
"                                                                                                    "
"────────────────────────────────────────────────────────────────────────────────────────────────────"
"› Ask Codex to do anything                                                                          "
"────────────────────────────────────────────────────────────────────────────────────────────────────"
"   /tmp/project                                                                                    "
"   main                                                                                            "
"   Context 0% used                                                                                 "
"   gpt-5.6-sol default · Ready                                                                     "
