codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__chatwidget_exec_and_status_layout_vt100_snapshot.snap
---
source: tui/src/chatwidget/tests/status_and_layout.rs
expression: normalize_snapshot_paths(term.backend().vt100().screen().contents())
---

























CODEX
  I’m going to search the repo for where “Change Approved” is rendered to update
  that view.


CODEX · Tool Call
┊ ✓ Explored · 16.00s · 0 lines · Ctrl+T details

• Investigating rendering code (0s • esc to interrupt)

────────────────────────────────────────────────────────────────────────────────
› Summarize recent commits
────────────────────────────────────────────────────────────────────────────────
  tab to queue message
  gpt-5.6-sol default · /tmp/project
